# improver

./: .codecov.yml  .deepsource.toml  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  LICENSE  None  README.md  codecov.yml  copyright_check  coverage_output.txt  environment.yml  init_check  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  singularity.def  test.bats  test_iris_regrid.py  test_notebook.ipynb
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template-md.md
.github/PULL_REQUEST_TEMPLATE/: config.yml
.github/workflows/: ci.yml  contrib.yml  copyright.yml  master_update.yml  pytest.yml  scheduled.yml  stale.yml  tests.yml
doc/: Makefile  about.rst  environment.yml  frontpage.rst  rtd_environment.yml
doc/_static/: hide_links.css  theme_overrides.css
doc/source/: Code-Style-Guide.md  Code-Style-Guide.rst  Definition-of-Done.md  Definition-of-Done.rst  Dependencies.rst  Guidance-for-Reviewing-Code.md  Guidance-for-Reviewing-Code.rst  How-to-implement-a-command-line-utility.md  How-to-implement-a-command-line-utility.rst  Making-a-new-release.rst  Running-at-your-site.md  Running-at-your-site.rst  Ticket-Creation-and-Definition-of-Ready.md  Ticket-Creation-and-Definition-of-Ready.rst  about.rst  adding_examples.rst  conf.py  frontpage.rst  improver.ensemble_calibration.ensemble_calibration.rst  improver.ensemble_calibration.ensemble_calibration_utilities.rst  improver.ensemble_calibration.rst  improver.grids.osgb.rst  improver.grids.rst  improver.nbhood.rst  improver.rst  improver.threshold.rst  index.rst  modules.rst  notebooks_gallery.rst
envs/: conda-forge.yml  environment_a.yml  environment_b.yml  environment_py3.6_iris2.2.yml  environment_py3.7_iris2.4.yml  environment_py36_iris22.yml  environment_py37_iris24.yml  environment_py37_iris30.yml  environment_py38_iris30.yml  latest.yml
etc/: VERSION  pylintrc  site-initps47
improver/: __init__.py  _lazy_iris_import.py  bases.py  between_thresholds.py  calculate_sleet_prob.py  constants.py  convection.py  cube_combiner.py  expected_value.py  feels_like_temperature.py  field_texture.py  grids.py  icing.py  lapse_rate.py  lightning.py  memprofile.py  orographic_enhancement.py  percentile.py  profile.py  snow_fraction.py  standardise.py  stochastic_noise.py  threshold.py  turbulence.py  uv_index.py  virtual_temperature.py
improver/api/: __init__.py
improver/blending/: __init__.py  blend_across_adjacent_points.py  calculate_weights_and_blend.py  recalibrate.py  spatial_weights.py  utilities.py  weighted_blend.py  weights.py
improver/calibration/: __init__.py  beta_recalibration.py  dataframe_utilities.py  dz_rescaling.py  emos_calibration.py  ensemble_calibration.py  numba_utilities.py  (+14 more)
improver_tests/: __init__.py  conftest.py  set_up_test_cubes.py  test_InputCubesPlugin.py  test_PostProcessingPlugin.py  test_api.py  test_example_data_path.py  test_field_texture.py  test_licence.py  test_set_up_test_cubes.py  test_source_code.py
master/: coverage_output.txt
pytest_codecov_1fdf12a3e63b5c25eca82ea90ae8045960f4d8a8/: coverage_output.txt
temp/: output.nc
tests/: test_set_up_test_cubes.py
(+4011 files in other folders)
