[metadata]
name = improver
author = UK Met Office
author_email = ben.fitzpatrick@metoffice.gov.uk
license = BSD
description = Integrated Model post PROcessing and VERification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metoppv/improver
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >= 3.6
packages = find:
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
install_requires =
    cartopy
    cftime == 1.0.1
    cf_units
    clize
    dask
    netCDF4
    numpy
    python-dateutil
    pytz
    scipy >= 1.3.0, < 1.4.0
    scitools-iris >= 2.2, < 3.0
    sigtools
    sphinx
    stratify
scripts = bin/improver

[options.packages.find]
exclude = improver_tests

[options.extras_require]
dev =
    astroid
    bandit
    black == 19.10b0
    codacy-coverage
    filelock
    isort == 5.*
    mock
    mypy
    pytest
    pytest-cov
    safety
    sphinx-autodoc-typehints
full =
    numba
    pysteps == 1.3.2
    statsmodels
    timezonefinder

[flake8]
max-line-length = 100
select = C,E,F,W
extend-ignore = E203,W503

[mypy]
ignore_missing_imports = True
exclude = cli
