[metadata]
name = improver
author = UK Met Office
author_email = ben.fitzpatrick@metoffice.gov.uk
license = BSD
description = Integrated Model post PROcessing and VERification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metoppv/improver
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >= 3.6
packages = find:
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
install_requires =
# Note: only minimal requirements are included here for development usage.
# Requirements are expected to be provided through another method such as conda.
# See envs directory at top level of repository.
    scitools-iris >= 3.0
scripts = bin/improver

[options.packages.find]
exclude = improver_tests

[flake8]
max-line-length = 100
select = C,E,F,W
extend-ignore = E203,E731,W503

[mypy]
ignore_missing_imports = True
exclude = cli
