[metadata]
name = improver
author = UK Met Office
author_email = ben.fitzpatrick@metoffice.gov.uk
license = BSD
description = Integrated Model post PROcessing and VERification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metoppv/improver
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >= 3.12
packages = find:
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
# Note: no install_requires run-time requirements are included here.
# Requirements are expected to be provided through another method such as conda.
# See envs directory at top level of repository.
scripts = bin/improver

[options.packages.find]
exclude =
    improver_tests
    improver_tests.*

[mypy]
ignore_missing_imports = True
exclude = cli
